Fix: Disable Auto Zoom in Input Text tag - Safari on iPhone

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,4 @@
 .cm-editor {
   color: #000;
+  font-size: 16px; /* via "Disable Auto Zoom in Input "Text" tag - Safari on iPhone", https://stackoverflow.com/a/6394497 */
 }
